# Development-of-an-Autonomous-Boat-Navigation-System

./: README.md  code source  code.txt  etape.txt  links  txtopengazebo.txt
CleaningBoat/: CMakeLists.txt  package.xml
Development and Implementation  ofAutonomousBoatMissions/: readme.md
Development and Implementation  ofAutonomousBoatMissions/workspace/asv_wave_sim/asv_wave_sim_gazebo/: CMakeLists.txt  package.xml
Development and Implementation  ofAutonomousBoatMissions/workspace/asv_wave_sim/asv_wave_sim_gazebo/config/: base_local_planner_params.yaml  config.rviz  costmap_common_params.yaml  local_costmap_params.yaml
Development and Implementation  ofAutonomousBoatMissions/workspace/asv_wave_sim/asv_wave_sim_gazebo/launch/: firebase_test.launch  gmap_rviz.launch  ocean_world.launch
Development and Implementation  ofAutonomousBoatMissions/workspace/asv_wave_sim/asv_wave_sim_gazebo/maps/: map.yaml
Development and Implementation  ofAutonomousBoatMissions/workspace/asv_wave_sim/asv_wave_sim_gazebo/models/boatcleaningc/: model.sdf
Development and Implementation  ofAutonomousBoatMissions/workspace/asv_wave_sim/asv_wave_sim_gazebo/msg/: Coord.msg  WasteDetection.msg  WasteSection.msg
Hardware Integration and Testing/: READme.md
Mechanical_Design/: Readme.md
boat version 5urdf/: CMakeLists.txt  package.xml
boatcleaningc/: CMakeLists.txt  package.xml
boatcleaningc/launch/: display.launch  gazebo.launch
boatcleaningc/meshes/: axedroit.STL  axegauche.STL
boatcleaningc/urdf/: boatcleaningc.csv  boatcleaningc.urdf
boatcleaningd/: CMakeLists.txt  (+1 more)
(+106 files in other folders)
